# Q-ThrusterSimulation

./: .clang-format  .codespell_words  .pre-commit-config.yaml  CMakeLists.txt  QThrusterMemoryOrganization.md  QThrusterMemoryOrganization.pptx  README.md  particle_branch_11.sln
particle_branch_11/: AddParticlesGPU.cuh  DataIO.cuh  FillGapsCPU.cuh  FillGapsGPU.cuh  ForceCurveMatlabReader  ForceCurveMatlabReader.m  ForceCurveReader.jl  QThrusterMain.cu  ThrustCalculationGPU.cuh  ThrustCalculationGPU2.cuh  TimerWrappers.cuh  TransferParticlesCPU.cuh  TransferParticlesGPU.cuh  WriteForce.cuh  WriteToSnowballGPU.cuh  WriteVTK.cuh  cone_open.vtk  gpuErrchk.cuh  kernel.cu  particle_branch_11.vcxproj
particle_branch_11/complex/: b_imag.txt  b_real.txt  e_real.txt
src/: BoxConeCollider.cuh  CalculateCellVolumesGPU.cuh  DataIO.cuh  FillGapsCPU.cuh  FillGapsGPU.cuh  ForceCurveGPU2024_02_16__23_59_49.txt  ForceCurveReader.jl  Load_EB.cuh  OtherFunctions.cuh  ParticleMoverCPU.cuh  ParticleMoverGPU.cuh  QThrusterMain.cu  ThrustCalculationGPU.cuh  ThrustCalculationGPU1.cuh  TimerWrappers.cuh  cone_closed.vtk  input_deck_2_7.txt
src/complex/: e_imag.txt
src/include/: AddParticlesGPU.cuh  BoxConeCollider.cuh  CalculateCellVolumesGPU.cuh  Load_EB.cuh  OtherFunctions.cuh  ParticleMoverCPU.cuh  ParticleMoverGPU.cuh  ThrustCalculationGPU2.cuh  TimerWrappers.cuh  TransferParticlesCPU.cuh  TransferParticlesGPU.cuh  WriteForce.cuh  WriteToSnowballGPU.cuh  WriteVTK.cuh  gpuErrchk.cuh
